@@ -1,21 +1,17 @@
 package round4.array;
 
 
-import java.util.Arrays;
-
-
-import java.util.LinkedList;
-import java.util.List;
+import java.util.*;
 
 public class L56_MergeIntervals {
     public int[][] merge(int[][] intervals) {
         List<int[]> list = new LinkedList<>();
         Arrays.sort(intervals, (a, b) -> a[0] - b[0]);
         for (int[] interval : intervals) {
-            if (list.isEmpty() || interval[0] > list.getLast()[1]) {
+            if (list.isEmpty() || interval[0] > list.get(list.size() - 1)[1]) {
                 list.add(interval);
             } else {
-                list.getLast()[1] = Math.max(interval[1], list.getLast()[1]);
+                list.get(list.size()-1)[1] = Math.max(interval[1], list.get(list.size()-1)[1]);
             }
         }
         return list.toArray(new int[list.size()][]);
